--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -16,34 +16,23 @@ News
 {% if news %}
     <h4>Новости: </h4>
     {% for art in news %}
+        {% if art.post_choice == '2' %}
         {{ art.post_title|Censor:art.post_title}}
         {{ art.creation_date|date:'d M Y' }}
         {{ art.post_text|Censor:art.post_text}}  
         <br> 
+        {% endif %}
     {% endfor %}   
-
-    {% if is_paginated %}
- 
-        {% if page_obj.has_previous %}
-            <a href="?page=1">First</a>
-            <a href="?page={{ page_obj.previous_page_number }}"><<<</a>
-        {% endif %}
     
-        {% for num in page_obj.paginator.page_range %}
-            {% if page_obj.number == num %}
-                <a>{{ num }}</a>
-            {% elif num > page_obj.number|add:'-2' and num < page_obj.number|add:'2' %}
-                <a href="?page={{ num }}">{{ num }}</a>
-            {% endif %}
-        {% endfor %}
-    
-        {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}">>>></a>
-            <a href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+    <h4>Статьи: </h4>
+    {% for item in news %}
+        {% if item.post_choice == '1' %}
+        {{ item.post_title|Censor:item.post_title}}
+        {{ item.creation_date|date:'d M Y' }}
+        {{ item.post_text|truncatechars:50|Censor:item.post_text }}
+        <br>
         {% endif %}
-        
-    {% endif %}
-      
+    {% endfor %} 
 {% else %}
     <h2>Новостей нет!</h2>
 {% endif %}
